Update name and content

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <title>Digital ID Card</title>
 </head>
 <body>
-         <h1>Romelyn Sila</h1>
-    </header>
 
+    <header>
+        <h1>Kiven Bagante</h1>
     </header>
 
     <main>
-        <p>Course: BSIT 1B </p>
-        <p>Dream Job: Visual Graphic Designer</p>
+        <p>Course: BSIT</p>
+        <p>Dream Job: Web Developer / Visual Graphic Designer </p>
     </main>
 
     <footer>
-        <a href="https://www.facebook.com/RomelynSilahshsh" target="_blank">
+        <a href="https://www.facebook.com/kivdream" target="_blank">
             Facebook Profile
         </a>
     </footer>
